Fix Grid header print appearance when horizontal scrolling is used

--- a/styles/web/common/grid.less
+++ b/styles/web/common/grid.less
@@ -171,14 +171,15 @@ tr.k-filter-row > th
 {
     .k-grid
     {
-        height:auto !important;
+        height: auto !important;
     }
 
     .k-grid-header
     {
-        padding:0 !important;
+        padding: 0 !important;
     }
 
+    .k-grid-header-wrap,
     .k-grid-content
     {
         overflow: visible;
